--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" type="text/css" href="reset.css">
 
 <script src="./vendor/pixi.js"></script>
+<script src="./vendor/underscore.js"></script>
+<script src="./vendor/backbone_extend.js"></script>
 
 <script src="index.js"></script>
 
