--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <link rel="stylesheet" type="text/css" href="reset.css">
 
 <script src="./vendor/pixi.js"></script>
-<script src="./vendor/underscore.js"></script>
 <script src="./vendor/backbone_extend.js"></script>
+<script src="./vendor/underscore.js"></script>
 
-<script src="index.js"></script>
+<script src="./entity_component_system.js"></script>
+<script src="./textures.js"></script>
+
+<script src="./index.js"></script>
 
 <body style="background: black;"></body>
