--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <link rel="stylesheet" type="text/css" href="reset.css">
 
-<script src="./vendor/pixi.js"></script>
 <script src="./vendor/backbone_extend.js"></script>
+<script src="./vendor/pixi.js"></script>
 <script src="./vendor/underscore.js"></script>
+<script src="./vendor/ease.js"></script>
+
+<script src="./import.js"></script>
 
 <script src="./entity_component_system.js"></script>
+<script src="./fromwhichtostring.js"></script>
+<script src="./keyboard.js"></script>
 <script src="./textures.js"></script>
+<script src="./tick_manager.js"></script>
+
+
+<script src="./components/ticking_component.js"></script>
+
+<script src="./components/player_input.js"></script>
+<script src="./components/position.js"></script>
+<script src="./components/sprite.js"></script>
+<script src="./components/motion.js"></script>
 
 <script src="./index.js"></script>
 
