--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 <script src="./keyboard.js"></script>
 <script src="./textures.js"></script>
 <script src="./tick_manager.js"></script>
-
+<script src="./camera.js"></script>
+<script src="./tiles.js"></script>
 
 <script src="./components/ticking_component.js"></script>
 
 <script src="./components/player_input.js"></script>
 <script src="./components/position.js"></script>
+<script src="./components/tile_position.js"></script>
 <script src="./components/sprite.js"></script>
 <script src="./components/motion.js"></script>
+
+<script src="./entities/tile.js"></script>
+
+<script src="./entities/brick.js"></script>
 
 <script src="./index.js"></script>
 
