gravity & basic collision detection & restitution
* move velocity initialization from position to motion
* add size component for getting width & height
* now assigning entity[component.name] = component for all components

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <script src="./tick_manager.js"></script>
 <script src="./camera.js"></script>
 <script src="./tiles.js"></script>
+<script src="./linetrace.js"></script>
 
 <script src="./components/ticking_component.js"></script>
 
 <script src="./components/player_input.js"></script>
 <script src="./components/position.js"></script>
+<script src="./components/size.js"></script>
 <script src="./components/tile_position.js"></script>
 <script src="./components/sprite.js"></script>
 <script src="./components/motion.js"></script>
