--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script src="./import.js"></script>
 
+<script src="./movement_modes.js"></script>
 <script src="./entity_component_system.js"></script>
 <script src="./fromwhichtostring.js"></script>
 <script src="./keyboard.js"></script>
@@ -15,6 +16,7 @@
 <script src="./camera.js"></script>
 <script src="./tiles.js"></script>
 <script src="./linetrace.js"></script>
+<script src="./now.js"></script>
 
 <script src="./components/ticking_component.js"></script>
 
